Fixed layout bug on home page

--- a/src/app/pages/days-checkin/containers/days-checkin/days-checkin.component.css
+++ b/src/app/pages/days-checkin/containers/days-checkin/days-checkin.component.css
@@ -1,16 +1,22 @@
 .vertical-container {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
+  vertical-align: middle;
+}
+
+.p-messages{
+  width: 500px !important;
 }
 
 .wrapper {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-top: 20%;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 16%;
+  padding-bottom: 25%; 
+  position: relative;
+  text-align: center;
 }
 
 #logo {
